--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "gatsby-plugin-sitemap": "^5.0.0",
     "prismjs": "^1.25.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-feather": "^2.0.9"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
